[tool.poetry]
name = "gamutrf"
version = "0.5.73"
description = "An orchestrated SDR scanner"
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "gamutrf" },
]

[tool.poetry.dependencies]
Flask = "3.1.2"
Jinja2 = "3.1.6"
bjoern = "3.2.2"
falcon = "4.2.0"
falcon-cors = "1.1.7"
gpsd-py3 = "0.3.0"
numpy = "2.4.1"
paho-mqtt = "2.1.0"
pandas = "2.3.3"
pbr = "7.0.3"
prometheus_client = "0.24.1"
python = ">=3.11,<3.13"
pyzmq = "27.1.0"
requests = "2.32.5"
sigmf = "1.2.10"
sysrsync = "1.1.1"
webcolors = "25.10.0"
zstandard = "0.25.0"
scipy = "1.17.0"

[tool.poetry.dev-dependencies]
attr = "0.3.2"
attrs = "25.3.0"
black = "25.1.0"
docker = "7.1.0"
pdbpp = "^0.11.0"
pylint = "3.3.7"
pytest = "8.4.1"
pytest-cov = "6.2.1"
pytype = "2024.10.11"

[tool.poetry.scripts]
gamutrf-compress_dirs = 'gamutrf.__main__:compress_dirs'
gamutrf-offline= 'gamutrf.__main__:offline'
gamutrf-scan = 'gamutrf.__main__:scan'
gamutrf-worker = 'gamutrf.__main__:worker'

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/gamutRF"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
