[tool.poetry]
name = "gamutrflib"
version = "0.5.73"
description = "gamutrf non-gnuradio common code"
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
packages = [
    { include = "gamutrflib" },
]

[tool.poetry.dependencies]
numpy = "2.4.4"
scipy = "1.17.1"
pandas = "3.0.2"
python = ">=3.11,<3.13"
pyzmq = "27.1.0"
zstandard = "0.25.0"

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/gamutRF"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
