[tool.poetry]
name = "gamutrfwaterfall"
version = "0.5.73"
description = "An orchestrated SDR scanner"
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
packages = [
    { include = "gamutrfwaterfall" },
]

[tool.poetry.dependencies]
Flask = "3.1.1"
cairocffi = "1.7.1"
matplotlib = "3.9.4"
numpy = "2.4.1"
pandas = "2.3.3"
pycairo = "1.29.0"
python = ">=3.12,<3.13"
pyzmq = "27.1.0"
scipy = "1.17.0"
zstandard = "0.25.0"
requests = "2.32.5"

[tool.poetry.scripts]
gamutrf-waterfall = 'gamutrfwaterfall.waterfall:main'

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/gamutRF"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
